<resources>
    <!-- Displayed texts -->
    <string name="app_name">Hello!</string>
    <string name="hello_comma">Hello,</string>

    <!-- Form texts -->
    <string name="hello_button_text">Say hello!</string>
    <string name="octopus_radio_button_text">🐙</string>
    <string name="hand_radio_button_text">👋</string>
    <string name="kitten_radio_button_text">😸</string>
    <string name="elephant_radio_button_text">🐘</string>
    <string name="wave_switch_text">Wave?</string>
    <string name="who_to_greet_field_hint">Who to greet?</string>

    <!-- Snackbar greeting -->
    <string name="snackbar_greeting">Hello, %s!</string>
</resources>